[package]
name = "s3presignkeyrust"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"
chrono = "0.4.33"
http = "1.0.0"
simple-error = "0.3.0"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
serde_dynamo = {version = "^4.2.7", features = ["aws-sdk-dynamodb+0_33"]}
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt"] }

